# local_goal_creator

./: CMakeLists.txt  package.xml
include/local_goal_creator/: local_goal_creator.h  stop_flag_manager.h
launch/: local_goal_creator.launch  test.launch
src/: local_goal_creator.cpp  local_goal_creator_node.cpp  stop_flag_manager.cpp  stop_flag_manager_node.cpp
